# ClashUx

./: CMakeLists.txt  README.md  test
components/: CMakeLists.txt  qtmaterialtabs.cpp
resource/: app.qrc
src/: CMakeLists.txt  ClashUx.cpp  ClashUx.ui  ClashUx.ui.autosave  ServiceWidgetItem.cpp  ServiceWidgetItem.ui  SysUtil.cpp  main.cpp  test.cpp
src/inc/: ClashUx.h  ServiceWidgetItem.h  SysUtil.h
